--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-datos-proponentes-seleccionados/form-datos-proponentes-seleccionados.component.html
@@ -298,6 +298,8 @@
                   matInput
                   #telefono
                   type="number"
+                  min="9999999"
+                  minlength="7"
                   maxlength="10"
                   formControlName="telefono"
                   required
@@ -788,6 +790,8 @@
                   matInput
                   #telefono2
                   type="number"
+                  min="9999999"
+                  minlength="7"
                   maxlength="10"
                   formControlName="telefono"
                   required
@@ -1416,6 +1420,8 @@
                     matInput
                     #telefono3
                     type="number"
+                    min="9999999"
+                    minlength="7"
                     maxlength="10"
                     formControlName="telefono"
                     required
