--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -139,13 +139,13 @@
       </ng-container>
       <ng-template #elseTemplate>
         <div class="row" style="margin-top: .6em;">
-          <section *ngIf="esComiteFiduciario === false">
+          <section class="d-flex" *ngIf="esComiteFiduciario === false">
             <div class="pr-1">
               <label><b>Observaciones</b></label>
             </div>
             <div class="col color-blue" [innerHTML]="innerObservacion( solicitudes.observaciones )"></div>
           </section>
-          <section *ngIf="esComiteFiduciario === true">
+          <section class="d-flex" *ngIf="esComiteFiduciario === true">
             <div class="pr-1">
               <label><b>Observaciones</b></label>
             </div>
