--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
@@ -542,8 +542,11 @@
       </mat-card-content>
     </mat-card>
     <div  class="animatedDown"
-          *ngIf="addressForm.get('condicionesGenerales').value != null && addressForm.get('reciboDePago').value != null && addressForm.get('cumpleAfianzado').value != null && addressForm.get('cumpleBeneficiario').value != null && addressForm.get('cumpleAsegurado').value != null"
-    >
+          *ngIf=" addressForm.get('condicionesGenerales').value != null
+                  && addressForm.get('reciboDePago').value != null
+                  && addressForm.get('cumpleAfianzado').value != null
+                  && addressForm.get('cumpleBeneficiario').value != null
+                  && addressForm.get('cumpleAsegurado').value != null">
       <mat-card class="shipping-card">
         <mat-card-header class="header-card" style="margin-left: -27px">
           <mat-card-title class="header-card--text"> Revisión </mat-card-title>
