--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-resultados-contratistas/tabla-resultados-contratistas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-resultados-contratistas/tabla-resultados-contratistas.component.html
@@ -123,16 +123,13 @@
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Seleccionar</th>
         <td mat-cell *matCellDef="let element">
-          <mat-radio-button
-            class="example-margin"
-            (change)="selectElement(element)"
-            [checked]="
-              this.contratacion['contratista'] === undefined
-                ? false
-                : this.contratacion['contratista'].numeroIdentificacion == element.numeroIdentificacion
-            "
-          >
+          <mat-radio-button class="example-margin"
+                            (change)="selectElement(element)"
+                            [checked]="checkRegistro( element )">
           </mat-radio-button>
+          <!--
+            this.contratacion['contratista'] === undefined ? false : this.contratacion['contratista'].numeroIdentificacion == element.numeroIdentificacion
+          -->
         </td>
       </ng-container>
 
@@ -141,7 +138,12 @@
     </table>
   </div>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-  <button mat-button color="warn" class="btn-guardar" type="submit" (click)="onSave()">
-    <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+  <button mat-button
+          color="warn"
+          class="btn-guardar"
+          type="submit"
+          [disabled]="seDiligencioCampo === false"
+          (click)="onSave()">
+          <img src="assets/img/icon/guardar.svg" alt="Regresar" />
   </button>
 </div>
