--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/actualizacion-poliza/actualizacion-poliza.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/actualizacion-poliza/actualizacion-poliza.component.html
@@ -1,58 +1,58 @@
-<mat-card class="shipping-card var-main-gris">
+<mat-card class="shipping-card var-main-gris" *ngIf="contratoPoliza && contratoPolizaId != null && data">
   <mat-card-content>
     <p>
       <strong> 
         Tipo de contrato:
       </strong>
-      Obra
+      {{ data.tipoIntervencion }}
     </p>
     <p>
       <strong> 
         Nombre del contratista:
       </strong>
-      Intervenrores S.A
+      {{ data.contratista.nombre }}
     </p>
     <p>
       <strong> 
         Tipo de identificación:
       </strong>
-      NIT
+      {{ getTipoDocumento( data.contratista.tipoIdentificacionCodigo ) }} 
     </p>
     <p>
       <strong> 
         Número de identificación:
       </strong>
-      900.675.987-4
+      {{ data.contratista.numeroIdentificacion }}
     </p>
     <p>
       <strong> 
         Número de la póliza:
       </strong>
-      0000-9868
+      {{ contratoPoliza.numeroPoliza }}
     </p>
     <p>
       <strong> 
         Nombre de la aseguradora:
       </strong>
-      Mapfre
+      {{ contratoPoliza.nombreAseguradora }}
     </p>
     <p>
       <strong> 
         Número de certificado:
       </strong>
-      CER404040
+      {{ contratoPoliza.numeroCertificado }}
     </p>
     <p>
       <strong> 
         Fecha de expedición de la póliza:
       </strong>
-      25/06/2020
+      {{ contratoPoliza.fechaExpedicion | date: 'dd/MM/yyyy' }}
     </p>
     <p>
       <strong> 
         Fecha de aprobación:
       </strong>
-      18/07/2020
+      {{ contratoPoliza.fechaAprobacion | date: 'dd/MM/yyyy' }}
     </p>
   </mat-card-content>
 </mat-card>
@@ -68,10 +68,10 @@
     <tbody>
       <tr *ngFor="let poliza of listaPolizas">
         <td class="mat-cell cdk-cell ng-star-inserted">
-          {{ poliza.poliza }}
+          {{ getPoliza( poliza.tipoGarantiaCodigo ) }} 
         </td>
         <td class="mat-cell cdk-cell ng-star-inserted">
-          {{ poliza.responsable }}
+          {{ getResponsable( ) }}
         </td>
       </tr>
     </tbody>
@@ -92,40 +92,36 @@
           <strong> 
             Razón de la actualización:
           </strong>
-          Terminación de contrato
+          {{ getRazonActualizacion(razonActualizacion) }}
         </p>
         <p>
           <strong> 
             Fecha de expedición de la actualización de la póliza:
           </strong>
-          20/07/2021
+          {{ fechaExpedicion | date: 'dd/MM/yyyy' }}
         </p>
         <p>
           <strong> 
             Seguros que necesitan actualización:
           </strong>
-          Buen manejo y correcta inversión del anticipo, Garantía de estabilidad y calidad de la obra
+            <em *ngFor="let seguro of polizasyseguros; index as i">
+                {{ getSeguros( seguro ) }} 
+                <span *ngIf="polizasyseguros.length !== i + 1">,</span>
+                <span *ngIf="polizasyseguros.length === i + 1">.</span>
+            </em>
         </p>
-
-        <mat-card-title class="header-card--text sub-text"> 
-          Buen manejo y correcta inversión del anticipo
-        </mat-card-title>
-        <p>
-          <strong> 
-            Tipo de actualización:
-          </strong>
-          Fecha, Valor
-        </p>
-
-        <mat-card-title class="header-card--text sub-text"> 
-          Garantía de estabilidad y calidad de la obra
-        </mat-card-title>
-        <p>
-          <strong> 
-            Tipo de actualización:
-          </strong>
-          Fecha, Valor
-        </p>
+        <div style="margin-top: 1em;" *ngFor="let seguro of segurosRazon">
+          <mat-card-title class="header-card--text alineacion-titulos2" style="padding-left: 0px; color: #474747;">
+              {{ firstLetterUpperCase( seguro.nombre ) }}
+          </mat-card-title>
+          <p><strong>Tipo de actualización: </strong>
+              <em *ngFor="let tipo of seguro.tipoActualizacion; index as  i">
+                  {{ getTipoActualizacion( tipo ) }} 
+                  <span *ngIf="seguro.tipoActualizacion.length !== i + 1">,</span>
+                  <span *ngIf="seguro.tipoActualizacion.length === i + 1">.</span>
+              </em>
+          </p>
+        </div>
       </mat-card-content>
     </mat-card>
   </mat-expansion-panel>
@@ -136,69 +132,69 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <mat-accordion>
+    <mat-accordion *ngFor="let seguro of seguros; index as i">
       <mat-expansion-panel class="expansion-style sub-expansion-black">
         <mat-expansion-panel-header class="expansion-style--header">
           <mat-panel-title class="expansion-style--title">
-            Seguro 1
+            Seguro {{ i + 1 }}
           </mat-panel-title>
         </mat-expansion-panel-header>
     
         <mat-card class="shipping-card var-main-gris">
           <mat-card-header class="header-card header-card--margin">
             <mat-card-title class="header-card--text">
-              Garantía de estabilidad y calidad de la obra
+              {{ seguro.nombre }}
             </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-            <div class="mb-2em">
+            <div class="mb-2em" *ngIf="seguro.tieneSeguro === true">
               <p>
                 <strong> 
                   Vigencia de la póliza:
                 </strong>
-                30/03/2021
+                {{ contratoPoliza.vigencia | date: 'dd/MM/yyyy' }}
               </p>
               <p>
                 <strong> 
                   Vigencia actualizada de la póliza:
                 </strong>
-                30/01/2021
+                {{ seguro.fechaSeguro | date: 'dd/MM/yyyy' }}
               </p>
             </div>
-            <div class="mb-2em">
+            <div class="mb-2em" *ngIf="seguro.tieneFechaAmparo === true">
               <p>
                 <strong> 
                   Vigencia del amparo:
                 </strong>
-                30/03/2021
+                {{ contratoPoliza.vigenciaAmparo | date: 'dd/MM/yyyy' }}
               </p>
               <p>
                 <strong> 
                   Vigencia actualizada del amparo:
                 </strong>
-                30/01/2021
+                {{ seguro.fechaAmparo | date: 'dd/MM/yyyy' }}
               </p>
             </div>
-            <div class="mb-2em">
+            <div class="mb-2em" *ngIf="seguro.tieneValorAmparo === true">
               <p>
                 <strong> 
                   Valor del amparo:
                 </strong>
-                $60.000.000
+                {{ contratoPoliza.valorAmparo | currency:'':'symbol-narrow':'.0-0' }}
               </p>
               <p>
                 <strong> 
                   Valor actualizado del amparo:
                 </strong>
-                $50.000.000
+                {{ seguro.valorAmparo| currency:'':'symbol-narrow':'.0-0' }}
               </p>
             </div>
           </mat-card-content>
         </mat-card>
       </mat-expansion-panel>
     </mat-accordion>
-    
   </mat-expansion-panel>
+
   <mat-expansion-panel class="expansion-style sub-expansion">
     <mat-expansion-panel-header class="expansion-style--header">
       <mat-panel-title class="expansion-style--title">
@@ -210,7 +206,8 @@
       <b>
         ¿Tiene observaciones especificas de la actualización?:
       </b>
-      Si
+      <span *ngIf="tieneObservaciones === true"><em>Si</em></span>
+      <span *ngIf="tieneObservaciones === false"><em>No</em></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
       <mat-card-header class="header-card header-card--margin">
@@ -218,9 +215,8 @@
           Observaciones especificas de la actualización
         </mat-card-title>
       </mat-card-header>
-      <mat-card-content>
-        <p>
-          Es necesaria la actualización para dar finalizada la póliza, ya que no se necesita más tiempo.
+      <mat-card-content *ngIf="observacionesEspecificas != null && observacionesEspecificas != ''">
+        <p [innerHTML]="observacionesEspecificas">
         </p>
       </mat-card-content>
     </mat-card>
@@ -232,37 +228,42 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <mat-card class="shipping-card var-main-gris">
+    <mat-card class="shipping-card var-main-gris" *ngIf="listaChequeoData">
       <mat-card-content>
         <p>
           <strong>
             ¿Cumple con los datos del Asegurado/ Beneficiario?:
           </strong>
-          Si
+          <span *ngIf="listaChequeoData.cumpleAsegurado === true">Si</span>
+          <span *ngIf="listaChequeoData.cumpleAsegurado === false">No</span>
         </p>
         <p>
           <strong>
             ¿Cumple con los datos del Beneficiario cuando se trate de garantía bancaria?:
           </strong>
-          Si
+          <span *ngIf="listaChequeoData.cumpleBeneficiario === true">Si</span>
+          <span *ngIf="listaChequeoData.cumpleBeneficiario === false">No</span>
         </p>
         <p>
           <strong>
             ¿Cumple con los datos del Tomador / Afianzado?:
           </strong>
-          Si
+          <span *ngIf="listaChequeoData.cumpleAfianzado === true">Si</span>
+          <span *ngIf="listaChequeoData.cumpleAfianzado === false">No</span>
         </p>
         <p>
           <strong>
             ¿Se incluye el recibo de pago con los datos requeridos?:
           </strong>
-          Si
+          <span *ngIf="listaChequeoData.reciboDePago === true">Si</span>
+          <span *ngIf="listaChequeoData.reciboDePago === false">No</span>
         </p>
         <p>
           <strong>
             ¿Se incluyen las condiciones generales de la póliza/ o su clausulado?:
           </strong>
-          Si
+          <span *ngIf="listaChequeoData.condicionesGenerales === true">Si</span>
+          <span *ngIf="listaChequeoData.condicionesGenerales === false">No</span>
         </p>
       </mat-card-content>
     </mat-card>
@@ -274,7 +275,7 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <mat-card class="shipping-card var-main-gris">
+    <mat-card class="shipping-card var-main-gris" *ngIf="dataRevision">
       <mat-card-header class="header-card header-card--margin">
         <mat-card-title class="header-card--text">
           Revisión
@@ -283,31 +284,63 @@
       <mat-card-content>
         <p>
           <strong>
-            Fecha de la revisión 2:
+            Fecha de la revisión {{ contadorRevision + 1 }}:
           </strong>
-          21/01/2021
+          {{ dataRevision.fechaRevision | date: 'dd/MM/yyyy' }}
         </p>
         <p>
           <strong>
-            Estado de la revisión 2:
+            Estado de la revisión {{ contadorRevision + 1 }}:
           </strong>
-          Aprobación
+          {{ getEstadoRevision( dataRevision.estadoRevision ) }}
         </p>
-        <h2 class="card-subTitle">Aprobación</h2>
-        <p>
-          <strong>
-            Fecha de aprobación:
-          </strong>
-          21/01/2021
-        </p>
-        <p>
-          <strong>
-            Responsable de aprobación:
-          </strong>
-          Nathalia Aranda
-        </p>
+        <div *ngIf="dataRevision.estadoRevision === estadosRevision.aprobacion">
+          <h2 class="card-subTitle">Aprobación</h2>
+          <p>
+            <strong>
+              Fecha de aprobación:
+            </strong>
+            {{ dataRevision.fechaAprob | date: 'dd/MM/yyyy' }}
+          </p>
+          <p>
+            <strong>
+              Responsable de aprobación:
+            </strong>
+            {{ getResponsable( dataRevision.responsableAprob) }}
+          </p>
+        </div>
       </mat-card-content>
     </mat-card>
+    <!--tabla-->
+    <div class="text-center" *ngIf="contratoPolizaActualizacionRevisionAprobacionObservacion.length > 0">
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 card-title-detalle">
+                <ng-container matColumnDef="fechaRevision">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="card-subTitle-detalle"> Fecha de revisión</th>
+                    <td mat-cell *matCellDef="let element" class="card-title-detalle border-color"> <b> {{ element.segundaFechaRevision | date: 'dd/MM/yyyy' }} </b></td>
+                </ng-container>
+                <ng-container matColumnDef="observacion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="card-subTitle-detalle"> Observaciones generales</th>
+                    <td mat-cell *matCellDef="let element" class="card-title-detalle border-color">
+                        <div [innerHtml]="element.observacionGeneral !== undefined ? element.observacionGeneral : ''"></div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="estadoRevisionCodigo">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="card-subTitle-detalle"> Estado de la revision</th>
+                    <td mat-cell *matCellDef="let element" class="card-title-detalle border-color">
+                        <div *ngIf="element.estadoSegundaRevision === estadosRevision.devuelta">
+                            Devuelta
+                        </div>
+                        <div *ngIf="element.estadoSegundaRevision === estadosRevision.aprobacion">
+                            Aprobada
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+    </div>
   </mat-expansion-panel>
 </mat-accordion>
 
