--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/observaciones-supervisor/observaciones-supervisor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/observaciones-supervisor/observaciones-supervisor.component.html
@@ -4,7 +4,7 @@
       Observaciones del supervisor
     </mat-card-title>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content style="text-align: left;">
     <p>
       <strong>
         <span>{{ observacionSupervisor.fechaCreacion | date: 'dd/MM/yyyy' }} </span>
@@ -33,7 +33,7 @@
       Verificación control y seguimiento
     </mat-card-title>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content style="text-align: left;">
     <p>
       <strong>
         <span>{{ observacionDetalle.fechaCreacion | date: 'dd/MM/yyyy' }} </span>
