--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
@@ -30,23 +30,31 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                    Actualización de póliza
-                </mat-panel-title>
+                <mat-panel-title
+                class="expansion-style--title"
+                [class.sin-diligenciar]="semaforoActualizacionPoliza == 'Incompleto'"
+                [class.completo]="semaforoActualizacionPoliza == 'Completo'"
+              >
+                Actualización de póliza
+              </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-expansion-panel-header class="expansion-style--header" *ngIf="esVerDetalle">
                 <mat-panel-title class="expansion-style--title">
                   Actualización de póliza
                 </mat-panel-title>
               </mat-expansion-panel-header>
-            <app-actualizacion-poliza-gtlc *ngIf="contratacionProyectoId" [esVerDetalle]="esVerDetalle" [contratacionProyectoId]="contratacionProyectoId" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza-gtlc>
+            <app-actualizacion-poliza-gtlc *ngIf="contratacionProyectoId && data" [esVerDetalle]="esVerDetalle" [contratacionProyectoId]="contratacionProyectoId" [contratoPolizaActualizacionId]="data.contratoPolizaActualizacionId" [contratoPolizaId]="data.contratoPolizaId" [data]="data" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza-gtlc>
 
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                    Balance financiero
-                </mat-panel-title>
+                <mat-panel-title
+                class="expansion-style--title"
+                [class.sin-diligenciar]="semaforoBalanceFinanciero == 'Incompleto'"
+                [class.completo]="semaforoBalanceFinanciero == 'Completo'"
+              >
+                Balance financiero
+              </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-expansion-panel-header class="expansion-style--header" *ngIf="esVerDetalle">
                 <mat-panel-title class="expansion-style--title">
