--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/invitacion-cerrada/invitacion-cerrada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/invitacion-cerrada/invitacion-cerrada.component.html
@@ -50,7 +50,8 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title " [ngClass]="{'sin-diligenciar':datos_class===0,'en-proceso':datos_class===1,'completo':datos_class===2}">
+                <mat-panel-title class="expansion-style--title " 
+                [ngClass]="{'sin-diligenciar':datos_class===0,'en-proceso':datos_class===1,'completo':datos_class===2}">
                     Selección de proponentes a invitar
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -61,7 +62,7 @@
                 [procesoSeleccion]="procesoSeleccion"
                 [editar]="bitPuedoEditar"
                 (guardar)="onSubmit()"
-                [style.pointer-events]="getStyleEvaluacion()">
+                [style.pointer-events]="getStyleProponentesCreado()">
             </app-form-datos-proponentes-seleccionados-invitacion-cerrada>
         </mat-expansion-panel>
 
