--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acuerdo-cofinanciacion/components/tabla-acuerdos/tabla-acuerdos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acuerdo-cofinanciacion/components/tabla-acuerdos/tabla-acuerdos.component.html
@@ -16,12 +16,12 @@
                 <td mat-cell *matCellDef="let element"> <b>{{element.fechaCreacion}}</b> </td>
             </ng-container>
 
-            <ng-container matColumnDef="numeroAcuerdo">
+            <ng-container matColumnDef="cofinanciacionId">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del acuerdo </th>
                 <td mat-cell *matCellDef="let element"> {{element.cofinanciacionId}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="vigenciaAcuerdo">
+            <ng-container matColumnDef="vigenciaCofinanciacionId">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Vigencia del acuerdo de cofinanciación </th>
                 <td mat-cell *matCellDef="let element"> {{element.vigenciaCofinanciacionId}} </td>
             </ng-container>
