--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-cronograma/tabla-cronograma.component.html
@@ -284,3 +284,46 @@
   </div>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
+
+<div *ngIf="true">
+  <mat-card class="shipping-card">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text"> Motivo de la devolución </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p class="text-justify">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id erat semper, hendrerit lectus in, bibendum
+        nisl. In elementum lorem id ipsum ultrices pulvinar. Aliquam semper erat dictum quam mollis egestas. Phasellus
+        vel rutrum eros, ornare laoreet sem. Sed tincidunt nulla purus, vitae posuere purus faucibus et. Suspendisse
+        viverra felis eget pharetra ornare. Aliquam erat volutpat. Suspendisse sit amet augue ultricies, semper eros
+        id, ultrices augue. Morbi sem sapien, cursus at posuere ut, euismod non lorem. Integer hendrerit ornare
+        rutrum. Proin bibendum dui vitae nulla dignissim, scelerisque luctus felis aliquam. In quis nisi libero.
+        Curabitur auctor, erat id euismod ultricies, magna lectus gravida felis, vel consequat risus ante et enim.
+        <br />
+
+        Curabitur eu tincidunt erat. Sed ut erat lorem. Suspendisse potenti. In hac habitasse platea dictumst. Cras
+        luctus gravida erat quis ullamcorper. Nunc lobortis libero id porta consectetur. Maecenas tempor leo eget
+        rutrum ultricies. Suspendisse fermentum in mauris eget ultrices. Donec ultricies eleifend mauris sit amet
+        aliquam. Ut id enim mi. Aliquam euismod felis non metus euismod, eget maximus mi eleifend. Proin malesuada
+        dolor eu urna commodo, at malesuada diam iaculis. In auctor justo a risus placerat consectetur. Sed cursus
+        quis justo vitae auctor. In a viverra est. <br />
+
+        Curabitur facilisis ligula id ipsum egestas, vel laoreet risus iaculis. Mauris tincidunt turpis sed turpis
+        pretium pretium. Ut finibus pretium ante nec gravida. Curabitur tincidunt leo vel accumsan feugiat. Curabitur
+        ullamcorper nisi vel odio cursus, sed convallis odio gravida. In non eros ex. Duis vel massa ac urna malesuada
+        maximus. Sed maximus, nisi vitae viverra tempor, ligula urna molestie ipsum, et iaculis massa eros bibendum
+        massa. Aenean sodales ipsum et odio aliquet, et ultricies quam malesuada. <br />
+
+        Mauris in libero vehicula, elementum est sit amet, congue turpis. Phasellus aliquet vitae sem eget rutrum.
+        Maecenas efficitur neque est, vitae lobortis urna semper ut. In tristique euismod rhoncus. Proin varius odio a
+        cursus pellentesque. Vivamus ultrices aliquam tincidunt. Fusce vitae leo condimentum, consequat leo vel,
+        fermentum elit. Sed aliquet eu tortor vel hendrerit. <br />
+
+        Curabitur blandit nibh ultrices magna viverra bibendum. Fusce vel sapien felis. Morbi tincidunt semper urna.
+        Pellentesque tempor maximus euismod. Aliquam at aliquet ipsum, sed sodales justo. Nulla euismod tortor vitae
+        sem maximus placerat. Suspendisse potenti. Phasellus egestas tincidunt urna vitae laoreet. Mauris id sem
+        ipsum. In id porttitor ex.
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
