--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/tabla-aprobar-orden-giro/tabla-aprobar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/tabla-aprobar-orden-giro/tabla-aprobar-orden-giro.component.html
@@ -11,12 +11,12 @@
 <section class="table-responsiv">
   <table mat-table [dataSource]="tablaAprobar" matSort>
 
-    <ng-container matColumnDef="fechaVerificacion">
+    <ng-container matColumnDef="fechaAprobacionFinanciera">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de verificación de orden de giro </th>
       <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacionFinanciera }} </b> </td>
     </ng-container>
 
-    <ng-container matColumnDef="numeroOrden">
+    <ng-container matColumnDef="numeroSolicitudOrdenGiro">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
       <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitudOrdenGiro }} </td>
     </ng-container>
@@ -31,7 +31,7 @@
       <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroContrato }} </td>
     </ng-container>
 
-    <ng-container matColumnDef="estadoAprobacion">
+    <ng-container matColumnDef="estadoNombre">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la aprobación </th>
         <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro ? element.estadoNombre2 : element.estadoNombre }} </td>
     </ng-container>
