--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/flujo-inversion-recursos-artc/flujo-inversion-recursos-artc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/flujo-inversion-recursos-artc/flujo-inversion-recursos-artc.component.html
@@ -31,12 +31,12 @@
     "
   >
     <table mat-table [dataSource]="dataSourceApoyo" matSort class="mat-elevation-z8">
-      <ng-container matColumnDef="fechaRevision">
+      <ng-container matColumnDef="fechaCreacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20">Fecha de revisión</th>
         <td mat-cell *matCellDef="let element" align="center">{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="observacionesSupervision" class="w-80">
+      <ng-container matColumnDef="observaciones" class="w-80">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Historial de observaciones del apoyo a la supervisión</th>
         <td mat-cell *matCellDef="let element" align="center">
           <section [innerHTML]="element.observaciones"></section>
