--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/tabla-contrato-interventoria-artc/tabla-contrato-interventoria-artc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/tabla-contrato-interventoria-artc/tabla-contrato-interventoria-artc.component.html
@@ -15,27 +15,27 @@
         <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacion }} </b> </td>
       </ng-container>
 
-      <ng-container matColumnDef="numeroContratoObra">
+      <ng-container matColumnDef="numeroContrato">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
         <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroContrato }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="proyectosAsociados">
+      <ng-container matColumnDef="cantidadProyectosAsociados">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad de proyectos asociados </th>
         <td mat-cell *matCellDef="let element" align="center"> {{ element.cantidadProyectosAsociados }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="proyectosAprobados">
+      <ng-container matColumnDef="cantidadProyectosRequisitosAprobados">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad de proyectos con requisitos validados </th>
         <td mat-cell *matCellDef="let element" align="center"> {{ element.cantidadProyectosRequisitosAprobados }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="proyectosPendientes">
+      <ng-container matColumnDef="cantidadProyectosRequisitosPendientes">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad de proyectos con requisitos pendientes </th>
         <td mat-cell *matCellDef="let element" align="center"> {{ element.cantidadProyectosRequisitosPendientes }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="estadoRequisito">
+      <ng-container matColumnDef="estadoNombre">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verificación </th>
         <td mat-cell *matCellDef="let element" align="center">
           <section *ngIf="element.estadoCodigo !== estadosConstruccionInterventoria.enviadoAlSupervisor.codigo"> {{ element.estadoNombre }} </section>
