--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/tabla-contrato-obra-artc/tabla-contrato-obra-artc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/tabla-contrato-obra-artc/tabla-contrato-obra-artc.component.html
@@ -35,7 +35,7 @@
         <td mat-cell *matCellDef="let element" align="center"> {{ element.cantidadProyectosRequisitosPendientes }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="estadoCodigo">
+      <ng-container matColumnDef="estadoNombre">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la validación </th>
         <td mat-cell *matCellDef="let element" align="center">
           <section *ngIf="element.estadoCodigo !== estadosConstruccionObra.enviadoAlSupervisor.codigo"> {{ element.estadoNombre }} </section>
