--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/tabla-validar-seguimiento-diario/tabla-validar-seguimiento-diario.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/tabla-validar-seguimiento-diario/tabla-validar-seguimiento-diario.component.html
@@ -14,7 +14,7 @@
     <!-- fechaReporte Column -->
     <ng-container matColumnDef="fechaUltimoSeguimientoDiario">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha del reporte</th>
-      <td mat-cell *matCellDef="let element">{{element.fechaUltimoSeguimientoDiario | date: 'dd/MM/yyyy'}}</td>
+      <td mat-cell *matCellDef="let element">{{element.fechaUltimoSeguimientoDiario}}</td>
     </ng-container>
 
     <!-- llaveMEN Column -->
