--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -32,7 +32,7 @@
 
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="fechaSolicitud">
+            <ng-container matColumnDef="fechaCreacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de solicitud </th>
                 <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion }}</b> </td>
             </ng-container>
@@ -40,7 +40,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitud }} </td>
             </ng-container>
-            <ng-container matColumnDef="modalidadContrato">
+            <ng-container matColumnDef="modalidadNombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidad del contrato </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadNombre }} </td>
             </ng-container>
@@ -48,7 +48,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroContrato }} </td>
             </ng-container>
-            <ng-container matColumnDef="estadoAprobacion">
+            <ng-container matColumnDef="estadoNombre2">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verificación </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === listaEstadoSolicitudPago.enviadaParaVerificacion ? element.estadoNombre2 : element.estadoNombre }} </td>
             </ng-container>
