--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -62,15 +62,15 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
                         <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
                     </ng-container>
-                    <ng-container matColumnDef="numDrp">
+                    <ng-container matColumnDef="numeroDrp">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
                         <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
                     </ng-container>
-                    <ng-container matColumnDef="valor">
+                    <ng-container matColumnDef="valorSolicitudDdp">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
                         <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                     </ng-container>
-                    <ng-container matColumnDef="saldo">
+                    <ng-container matColumnDef="saldoPresupuestal">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
                         <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                     </ng-container>
