--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-monitoreo-compromisos/tabla-monitoreo-compromisos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-monitoreo-compromisos/tabla-monitoreo-compromisos.component.html
@@ -16,7 +16,7 @@
       <td mat-cell *matCellDef="let element"> <b>{{element.fechaOrdenDia}}</b> </td>
     </ng-container>
 
-    <ng-container matColumnDef="numero">
+    <ng-container matColumnDef="numeroComite">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de comité </th>
       <td mat-cell *matCellDef="let element"> {{element.numeroComite}} </td>
     </ng-container>
@@ -26,7 +26,7 @@
       <td mat-cell *matCellDef="let element"> {{element.cantidadCompromisos}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="nivelCumplimiento">
+    <ng-container matColumnDef="cantidadCompromisosCumplidos">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Nivel de cumplimiento </th>
       <td mat-cell *matCellDef="let element">
         <section class="flex-center">
