--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-otros-temas/tabla-otros-temas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-otros-temas/tabla-otros-temas.component.html
@@ -11,17 +11,17 @@
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="tabla text-center">
     
-        <ng-container matColumnDef="responsable">
+        <ng-container matColumnDef="nombreResponsable">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Responsable </th>
             <td mat-cell *matCellDef="let element"> <b>{{ element.nombreResponsable }}</b> </td>
         </ng-container>
     
-        <ng-container matColumnDef="tiempo">
+        <ng-container matColumnDef="tiempoIntervencion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tiempo </th>
             <td mat-cell *matCellDef="let element"> {{element.tiempoIntervencion}} minutos </td>
         </ng-container>
     
-        <ng-container matColumnDef="temaDolicitud">
+        <ng-container matColumnDef="tema">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tema solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.tema}} </td>
         </ng-container>
