--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-validacion-solicitudes-contractuales/tabla-validacion-solicitudes-contractuales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-validacion-solicitudes-contractuales/tabla-validacion-solicitudes-contractuales.component.html
@@ -11,17 +11,17 @@
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="tabla text-center">
 
-        <ng-container matColumnDef="fecha">
+        <ng-container matColumnDef="fechaSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de solicitud </th>
             <td mat-cell *matCellDef="let element"> <b>{{element.fechaSolicitud | date: 'dd/MM/yyyy'}}</b> </td>
         </ng-container>
 
-        <ng-container matColumnDef="numero">
+        <ng-container matColumnDef="numeroSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.numeroSolicitud}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="tipo">
+        <ng-container matColumnDef="tipoSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.tipoSolicitud}} </td>
         </ng-container>
