--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-verificar-cumplimiento/tabla-verificar-cumplimiento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-verificar-cumplimiento/tabla-verificar-cumplimiento.component.html
@@ -25,7 +25,7 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="responsable">
+      <ng-container matColumnDef="nombreResponsable">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Responsable</th>
         <td mat-cell *matCellDef="let element">{{ element.nombreResponsable }}</td>
       </ng-container>
@@ -35,7 +35,7 @@
         <td mat-cell *matCellDef="let element">{{ element.fechaCumplimiento | date: 'dd/MM/yyyy' }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="fechaReporte">
+      <ng-container matColumnDef="fechaModificacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha del reporte</th>
         <td mat-cell *matCellDef="let element">
           {{
@@ -46,7 +46,7 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="estadoReportado">
+      <ng-container matColumnDef="nombreEstado">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado reportado</th>
         <td mat-cell *matCellDef="let element">{{ element.nombreEstado }}</td>
       </ng-container>
