--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
@@ -18,7 +18,7 @@
   <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="mt-2em mb-2em">
 
-      <ng-container matColumnDef="fecha">
+      <ng-container matColumnDef="fechaCreacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha observación </th>
         <td mat-cell *matCellDef="let element" align="center">
           <span> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </span>
