--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
@@ -17,12 +17,12 @@
               <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaCreacion }} </b> </td>
           </ng-container>
     
-          <ng-container matColumnDef="nombreRol">
+          <ng-container matColumnDef="nombre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 40%;"> Nombre de la lista </th>
             <td mat-cell *matCellDef="let element" align="center"> {{ element.nombre }} </td>
           </ng-container>
     
-          <ng-container matColumnDef="estadoRol">
+          <ng-container matColumnDef="eliminado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la lista </th>
             <td mat-cell *matCellDef="let element" align="center"> {{ element.eliminado === false ? 'Activo' : 'Inactivo' }} </td>
           </ng-container>
