--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-procesos/tabla-procesos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/tabla-procesos/tabla-procesos.component.html
@@ -16,27 +16,27 @@
                 <td mat-cell *matCellDef="let element"> <b>{{element.fechaCreacion }}</b> </td>
             </ng-container>
 
-            <ng-container matColumnDef="tipo">
+            <ng-container matColumnDef="tipoProcesoNombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de proceso </th>
                 <td mat-cell *matCellDef="let element"> {{element.tipoProcesoNombre}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="numero">
+            <ng-container matColumnDef="numeroProceso">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de proceso </th>
                 <td mat-cell *matCellDef="let element"> {{element.numeroProceso}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="etapa">
+            <ng-container matColumnDef="etapaProcesoSeleccionNombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Etapa del proceso </th>
                 <td mat-cell *matCellDef="let element"> {{element.etapaProcesoSeleccionNombre}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="estadoDelProceso">
+            <ng-container matColumnDef="estadoProcesoSeleccionNombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del proceso </th>
                 <td mat-cell *matCellDef="let element"> {{element.estadoProcesoSeleccionNombre}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="estadoDelRegistro">
+            <ng-container matColumnDef="esCompleto">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
                 <td mat-cell *matCellDef="let element">
                     <div class="flex-span" *ngIf="element.esCompleto === true">
