--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/ver-observaciones/ver-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/ver-observaciones/ver-observaciones.component.html
@@ -1,3 +1,7 @@
+<button mat-button mat-dialog-close class="modal--btn-cerrar">
+    <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar" />
+</button>
+
 <h1 class="title-menu--h1 ml9">
     Observaciones de la solicitud {{procesoseleccion.numeroProceso}}
 </h1>
